--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,13 @@ header {
   background-image: url(images/pattern-bg.png);
   background-repeat: no-repeat;
   background-position-x: -500px;
-  background-size: 400%;
+  background-size: 1800px;
   width: 100%;
   height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 20px 20px 0;
   box-sizing: border-box;
 }
 header h1 {
@@ -45,13 +45,52 @@ header #div-input input {
   outline: none;
   padding: 0 0 2px 15px;
   font-family: Rubik;
+  font-size: 18px;
   color: #2b2b2b;
+}
+header #div-input input::placeholder {
+  font-size: 14px;
 }
 header #div-input button {
   border: none;
   border-radius: 0 15px 15px 0;
   width: 70px;
   background-color: black;
+}
+
+main {
+  position: absolute;
+  top: 150px;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 20px;
+}
+main #results {
+  border: none;
+  border-radius: 15px;
+  background-color: white;
+  padding: 5px 0 25px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main #results h2 {
+  text-align: center;
+  margin: 20px 0 0;
+  font-size: 11px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #969696;
+}
+main #results h3 {
+  text-align: center;
+  margin: 10px 0 0;
+}
+
+#map {
+  background-color: grey;
+  width: 100%;
+  height: 400px;
 }
 
 .attribution {
