--- a/styles.scss
+++ b/styles.scss
@@ -98,7 +98,8 @@ main {
     box-sizing: border-box;
 
     width: 100%;
-    padding: 20px;    
+    padding: 20px;
+    // z-index: 1;    
     
     #results {
         border: none;
@@ -133,7 +134,8 @@ main {
 #map {
     // background-color: grey;
     width: 100%;
-    height: 400px;
+    height: 500px;
+    z-index: -1;
 }
 
 .attribution {
