--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,9 @@ main #results {
   flex-direction: column;
   align-items: center;
 }
+main #results .divider {
+  display: none;
+}
 main #results h2 {
   text-align: center;
   margin: 20px 0 0;
@@ -100,6 +103,62 @@ main #results h3 {
 
 .attribution a {
   color: #3e52a3;
+}
+
+@media only screen and (min-width: 750px) {
+  header {
+    background-repeat: no-repeat;
+    background-position-x: 0px;
+    background-size: 1500px;
+    height: 260px;
+  }
+  header #div-input {
+    width: 500px;
+    display: flex;
+  }
+  header #div-input input::placeholder {
+    font-size: 16px;
+  }
+  header #div-input input:hover {
+    cursor: pointer;
+  }
+  header #div-input button:hover {
+    background-color: #2b2b2b;
+    cursor: pointer;
+  }
+
+  main {
+    position: absolute;
+    top: 170px;
+    box-sizing: border-box;
+    width: 80%;
+    padding: 20px;
+  }
+  main #results {
+    border-radius: 15px;
+    background-color: white;
+    padding: 5px 20px 25px;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  main #results .divider {
+    display: block;
+    height: 50px;
+    border-right: solid 1px #969696;
+    margin: 30px 20px 0;
+  }
+  main #results h2 {
+    text-align: left;
+  }
+  main #results h3 {
+    text-align: left;
+  }
+
+  #map {
+    width: 100%;
+    height: 500px;
+    z-index: -1;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
