--- a/styles.scss
+++ b/styles.scss
@@ -112,6 +112,10 @@ main {
         flex-direction: column;
         align-items: center;
 
+        .divider {
+            display: none;
+        }
+
         h2 {
             text-align: center;
             margin: 20px 0 0;
@@ -151,7 +155,76 @@ main {
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 @media only screen and (min-width: 750px) {
-   
+    header {
+        background-repeat: no-repeat;
+        background-position-x: 0px;
+        background-size: 1500px;
+        
+        height: 260px;
+        
+        #div-input {
+            width: 500px;    
+            display: flex;
+                
+            input::placeholder {
+                font-size: 16px;
+            }
+
+            input:hover {
+                cursor: pointer;
+            }
+    
+            button:hover {
+                background-color: $vd-gray;
+                cursor: pointer;
+            }            
+        }
+    }
+    
+    main {
+        position: absolute;
+        top: 170px;
+        box-sizing: border-box;
+    
+        width: 80%;
+        padding: 20px;
+        
+        #results {
+            border-radius: 15px;
+            background-color: white;
+    
+            padding: 5px 20px 25px;
+    
+            flex-direction: row;
+            justify-content: space-evenly;
+
+            .divider {
+                display: block;
+                height: 50px;
+                border-right: solid 1px $d-gray;
+
+                margin: 30px 20px 0;
+
+
+            }
+    
+            h2 {
+                text-align: left;
+            }        
+            
+            h3 {
+                text-align: left;
+            }
+            
+        }
+    }
+    
+    #map {
+        // background-color: grey;
+        width: 100%;
+        height: 500px;
+        z-index: -1;
+    }
 }
 
 
